# tipping-point-uk-charity-bankers

./: .gitignore  README.md  environment.yml  pyproject.toml  settings.ini  setup.cfg  setup.py
nbs/: index.ipynb  nbdev.yml
tipping_point_uk_charity_bankers/: _modidx.py
